Fix vertical overflow bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@ body {
 }
 
 html, body, .container {
-  height: 100%;
+  min-height: 100%;
 }
 
 img {
@@ -29,7 +29,7 @@ img {
 }
 
 .logo {
-  height: 40%;
+  height: 30vh;
 }
 
 .logo__image {
@@ -41,7 +41,8 @@ img {
  * Instagram feed
  */
 .image-strip {
-  max-height: 150px;
+  height: 150px;
+  margin-bottom: 1em;
   overflow-y: hidden;
 }
 .image-strip .thumbnail {
